--- a/PollingData.html
+++ b/PollingData.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Emi Cooper">
-<meta name="dcterms.date" content="2024-11-14">
+<meta name="dcterms.date" content="2024-12-13">
 
 <title>Polling Data</title>
 <style>
@@ -64,7 +64,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 14, 2024</p>
+      <p class="date">December 13, 2024</p>
     </div>
   </div>
   
@@ -76,7 +76,13 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>The United States</p>
+<section id="introduction" class="level2">
+<h2 class="anchored" data-anchor-id="introduction">Introduction</h2>
+<p>The job guarantee is widely supported across political ideologies, races, genders, and locations. Typically divisive ethical and political issues around neoliberalism, socialism, and public policy are bypassed around the question of whether a job guarantee program is favorable. The job guarantee program is a populist and reformist policy movement, that is not partisan or targeted for the advancement of one group at the expense of another. The job guarantee program provides equal access to employment for all people, providing the opportunity for economic mobility regardless of identity. This avenue through which social inequity is addressed is broadly appealing because redistribution politics are not in question. The criticisms of direct cash transfer government benefits are not applicable to a job guarantee because the employment of labor that is not typically utilized generates productivity, contributing to the growth of the economy. The aggregate economic goals that are achieved through the jobs guarantee are beneficial to people of all backgrounds and socioeconomic positions.</p>
+<p>Support for the job guarantee has been measured through various polls, conducted in several different countries. The polls used for this paper are a Hill-Harris survey conducted in 2020, a YouGov UK poll conducted in the same year, and a French survey from 2021 by Opinionway and Institut Rousseau. All of these studies illustrate the overwhelming support for the job guarantee, and demonstrate that a diverse collection of social groups and identity categories are at least receptive, and substantially in favor of, a publicly funded jobs guarantee program.</p>
+</section>
+<section id="the-united-states" class="level2">
+<h2 class="anchored" data-anchor-id="the-united-states">The United States</h2>
 <p>In a survey conducted by Hill-HarrisX among 933 registered voters, respondents were asked whether or not they support a federally funded job guarantee.</p>
 <p>This survey was conducted online within the United States from July 3-4, 2020 among 933 registered voters by HarrisX. The sampling margin of error of this poll is plus or minus 3.2 percentage points. The results reflect a nationally representative sample of registered voters. Results were weighted for age within gender, region, race/ethnicity, income, political party, and education where necessary to align them with their actual proportions in the population.</p>
 <p>The proportions of the sample population that supported, opposed, or were unsure of the job guarantee are displayed below.</p>
@@ -164,7 +170,9 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p>The United Kingdom</p>
+</section>
+<section id="the-united-kingdom" class="level2">
+<h2 class="anchored" data-anchor-id="the-united-kingdom">The United Kingdom</h2>
 <p>This poll conducted by YouGov and Neon in Great Britain on April 16-17 of 2020 asked respondents the following question: <strong>Thinking about the financial impact of a crisis like the Coronavirus pandemic, to what extent, if at all, would you support or oppose the government introducing the following permanent measure?</strong> <strong>A job guarantee - where the government makes sure everyone who can work has a job.</strong> It surveyed 2,015 people, finding majority support for the JG in all categories of gender, age, region, and political affiliation. The poll also asked the same question about the Universal Basic Income policy proposal, which garnered less support.</p>
 <p>Political Party</p>
 <p>The respondents belonging to the Conservative and Labor parties had the highest level of support at 73%, compared to Liberal Democrats of which only 65% support the job guarantee. 8% of the Conservative sample group are un-supportive of the job guarantee, compared to 6% of Labor and 11% of Liberal Democrats.</p>
@@ -223,7 +231,9 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 <p>Support for the job guarantee dominates in all regions. The opinions across different geographical zones of the UK do not vary greatly. The greatest level of support is in Scotland at 74% and the lowest is in London at 65%. Only 9% of Londoners are against the job guarantee, and 8% of the Scotland sample oppose it.</p>
-<p>France</p>
+</section>
+<section id="france" class="level2">
+<h2 class="anchored" data-anchor-id="france">France</h2>
 <p>This survey from Opinionway and Institut Rousseau with a sample size of 1,011 asked whether respondents would support a job guarantee in the ecological sector with data by gender, age, region, and population density. It found majority support for the job guarantee across all the tested demographic groups.</p>
 <p>Gender</p>
 <div class="cell">
@@ -318,6 +328,7 @@ ul.task-list li input[type="checkbox"] {
 <p>viridis, brewer pallates</p>
 <p>put don’t know and neither together, which group has the most uninformed or unopinionated</p>
 <p>make percentages appear differently: specify axis label - specify what the tic marks should be</p>
+</section>
 
 </main>
 <!-- /main column -->
