--- a/PollingData.html
+++ b/PollingData.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Emi Cooper">
-<meta name="dcterms.date" content="2024-12-13">
+<meta name="dcterms.date" content="2024-12-14">
 
 <title>Polling Data</title>
 <style>
@@ -64,7 +64,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">December 13, 2024</p>
+      <p class="date">December 14, 2024</p>
     </div>
   </div>
   
@@ -85,27 +85,18 @@ ul.task-list li input[type="checkbox"] {
 <h2 class="anchored" data-anchor-id="the-united-states">The United States</h2>
 <p>In a survey conducted by Hill-HarrisX among 933 registered voters, respondents were asked whether or not they support a federally funded job guarantee.</p>
 <p>This survey was conducted online within the United States from July 3-4, 2020 among 933 registered voters by HarrisX. The sampling margin of error of this poll is plus or minus 3.2 percentage points. The results reflect a nationally representative sample of registered voters. Results were weighted for age within gender, region, race/ethnicity, income, political party, and education where necessary to align them with their actual proportions in the population.</p>
-<p>The proportions of the sample population that supported, opposed, or were unsure of the job guarantee are displayed below.</p>
-<p>Political Party</p>
-<p>The support, opposition, and uncertainty of the job guarantee are different across political parties. While the majority of all parties support the job guarantee, Democrats have the most support at 89%, Republicans have the most opposition at 14%, and Independents are the most unsure at 17%.</p>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-5-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-5-2.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<p>Education</p>
-<p>The sample population grouped by education level was divided between people with less than 4 years of college and those with at least 4 years of college.</p>
+</section>
+<section id="the-united-kingdom" class="level2">
+<h2 class="anchored" data-anchor-id="the-united-kingdom">The United Kingdom</h2>
+<p>This poll conducted by YouGov and Neon in Great Britain on April 16-17 of 2020 asked respondents the following question: <strong>Thinking about the financial impact of a crisis like the Coronavirus pandemic, to what extent, if at all, would you support or oppose the government introducing the following permanent measure?</strong> <strong>A job guarantee - where the government makes sure everyone who can work has a job.</strong> It surveyed 2,015 people, finding majority support for the JG in all categories of gender, age, region, and political affiliation. The poll also asked the same question about the Universal Basic Income policy proposal, which garnered less support.</p>
+</section>
+<section id="france" class="level2">
+<h2 class="anchored" data-anchor-id="france">France</h2>
+<p>This survey from Opinionway and Institut Rousseau with a sample size of 1,011 asked whether respondents would support a job guarantee in the ecological sector with data by gender, age, region, and population density. It found majority support for the job guarantee across all the tested demographic groups.</p>
+</section>
+<section id="politics" class="level2">
+<h2 class="anchored" data-anchor-id="politics">Politics</h2>
+<p>The respondents belonging to the Conservative and Labor parties had the highest level of support at 73%, compared to Liberal Democrats of which only 65% support the job guarantee. 8% of the Conservative sample group are un-supportive of the job guarantee, compared to 6% of Labor and 11% of Liberal Democrats.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -122,9 +113,35 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p>The support and opposition for the job guarantee is very close between the two groups, however 14% of people with 4 or more years of college are in opposition. People with less education have slightly higher support 79%, only one percentage point higher than the highly educated sample group.</p>
-<p>Income</p>
-<p>People earning less than $75K and people earning at least $75K per year are compared in these graphs.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="PollingData_files/figure-html/unnamed-chunk-7-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<p>The support, opposition, and uncertainty of the job guarantee are different across political parties. While the majority of all parties support the job guarantee, Democrats have the most support at 89%, Republicans have the most opposition at 14%, and Independents are the most unsure at 17%.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="PollingData_files/figure-html/unnamed-chunk-8-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="PollingData_files/figure-html/unnamed-chunk-8-2.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+</section>
+<section id="region" class="level2">
+<h2 class="anchored" data-anchor-id="region">Region</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -133,16 +150,25 @@ ul.task-list li input[type="checkbox"] {
 </figure>
 </div>
 </div>
+</div>
+<p>Support for the job guarantee dominates in all regions. The opinions across different geographical zones of the UK do not vary greatly. The greatest level of support is in Scotland at 74% and the lowest is in London at 65%. Only 9% of Londoners are against the job guarantee, and 8% of the Scotland sample oppose it.</p>
+<div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-9-2.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-10-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="PollingData_files/figure-html/unnamed-chunk-10-2.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
-<p>13% of higher earners, compared to 8% of lower earners oppose the job guarantee. 82% of those earning less than $75K and 77% of those earning at least $75K support the job guarantee.</p>
-<p>Race</p>
+<p>All regions support the job guarantee at high levels, between 79% and 82%. The most opposition was in the Île-de-France at 20%.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -159,23 +185,51 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p>The Black sample population has the highest level of support for the job guarantee at 84%, while the Hispanic segment of the sample supports it the least at 74%.</p>
-<p>Region</p>
+</section>
+<section id="education" class="level2">
+<h2 class="anchored" data-anchor-id="education">Education</h2>
+<p>The sample population grouped by education level was divided between people with less than 4 years of college and those with at least 4 years of college.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-14-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-12-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="PollingData_files/figure-html/unnamed-chunk-12-2.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
+<p>The support and opposition for the job guarantee is very close between the two groups, however 14% of people with 4 or more years of college are in opposition. People with less education have slightly higher support 79%, only one percentage point higher than the highly educated sample group.</p>
 </section>
-<section id="the-united-kingdom" class="level2">
-<h2 class="anchored" data-anchor-id="the-united-kingdom">The United Kingdom</h2>
-<p>This poll conducted by YouGov and Neon in Great Britain on April 16-17 of 2020 asked respondents the following question: <strong>Thinking about the financial impact of a crisis like the Coronavirus pandemic, to what extent, if at all, would you support or oppose the government introducing the following permanent measure?</strong> <strong>A job guarantee - where the government makes sure everyone who can work has a job.</strong> It surveyed 2,015 people, finding majority support for the JG in all categories of gender, age, region, and political affiliation. The poll also asked the same question about the Universal Basic Income policy proposal, which garnered less support.</p>
-<p>Political Party</p>
-<p>The respondents belonging to the Conservative and Labor parties had the highest level of support at 73%, compared to Liberal Democrats of which only 65% support the job guarantee. 8% of the Conservative sample group are un-supportive of the job guarantee, compared to 6% of Labor and 11% of Liberal Democrats.</p>
+<section id="income" class="level2">
+<h2 class="anchored" data-anchor-id="income">Income</h2>
+<p>People earning less than $75K and people earning at least $75K per year are compared in these graphs.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="PollingData_files/figure-html/unnamed-chunk-15-1.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+<div class="cell-output-display">
+<div>
+<figure class="figure">
+<p><img src="PollingData_files/figure-html/unnamed-chunk-15-2.png" class="img-fluid figure-img" width="672"></p>
+</figure>
+</div>
+</div>
+</div>
+<p>13% of higher earners, compared to 8% of lower earners oppose the job guarantee. 82% of those earning less than $75K and 77% of those earning at least $75K support the job guarantee.</p>
+</section>
+<section id="race" class="level2">
+<h2 class="anchored" data-anchor-id="race">Race</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
@@ -192,100 +246,72 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 </div>
-<p>Brexit</p>
+<p>The Black sample population has the highest level of support for the job guarantee at 84%, while the Hispanic segment of the sample supports it the least at 74%.</p>
+</section>
+<section id="brexit" class="level2">
+<h2 class="anchored" data-anchor-id="brexit">Brexit</h2>
 <p>The survey results are also diagregated between respondents who believe the UK should have left the EU and those who believe that the UK should not have left the EU.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-20-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-21-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-20-2.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-21-2.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
 <p>People in the sample who believe that the UK should have left the EU were more supportive of the job guarantee at 74% support. The people who believe the UK should have remained in the EU oppose the job guarantee at 9%, 3% higher than the ‘leave’ camp.</p>
-<p>Region</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-22-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-25-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-23-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<p>Support for the job guarantee dominates in all regions. The opinions across different geographical zones of the UK do not vary greatly. The greatest level of support is in Scotland at 74% and the lowest is in London at 65%. Only 9% of Londoners are against the job guarantee, and 8% of the Scotland sample oppose it.</p>
 </section>
-<section id="france" class="level2">
-<h2 class="anchored" data-anchor-id="france">France</h2>
-<p>This survey from Opinionway and Institut Rousseau with a sample size of 1,011 asked whether respondents would support a job guarantee in the ecological sector with data by gender, age, region, and population density. It found majority support for the job guarantee across all the tested demographic groups.</p>
-<p>Gender</p>
+<section id="gender" class="level2">
+<h2 class="anchored" data-anchor-id="gender">Gender</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-27-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-28-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-27-2.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-28-2.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 </div>
 <p>Women in France support the job guarantee 8% more than men according to this poll. Both groups have majority support for the job guarantee.</p>
-<p>Region</p>
+</section>
+<section id="communities-rural-suburban-and-urban" class="level2">
+<h2 class="anchored" data-anchor-id="communities-rural-suburban-and-urban">Communities: Rural, Suburban, and Urban</h2>
 <div class="cell">
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-31-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-32-1.png" class="img-fluid figure-img" width="672"></p>
-</figure>
-</div>
-</div>
-</div>
-<p>All regions support the job guarantee at high levels, between 79% and 82%. The most opposition was in the Île-de-France at 20%.</p>
-<p>Communities: Rural, Suburban, and Urban</p>
-<div class="cell">
-<div class="cell-output-display">
-<div>
-<figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-34-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-33-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-34-2.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-33-2.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -295,14 +321,14 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-38-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-37-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-38-2.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-37-2.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
@@ -311,14 +337,14 @@ ul.task-list li input[type="checkbox"] {
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-41-1.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-40-1.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
 <div class="cell-output-display">
 <div>
 <figure class="figure">
-<p><img src="PollingData_files/figure-html/unnamed-chunk-41-2.png" class="img-fluid figure-img" width="672"></p>
+<p><img src="PollingData_files/figure-html/unnamed-chunk-40-2.png" class="img-fluid figure-img" width="672"></p>
 </figure>
 </div>
 </div>
